--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "ol-wfs-capabilities",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Format for reading WFS capabilities data",
   "main": "lib/WFSCapabilities.js",
   "module": "lib/WFSCapabilities.js",
+  "types": "lib/WFSCapabilities.d.ts",
   "type": "module",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "lint": "eslint lib",
+    "pretest": "npm run lint && npm run typecheck",
     "format": "eslint --fix lib",
-    "test": "jest"
+    "test": "jest",
+    "generate-types": "tsc --project config/tsconfig-build.json --declaration --declarationMap --emitDeclarationOnly --outdir lib",
+    "typecheck": "tsc --pretty"
   },
   "keywords": [
     "ol",
@@ -39,7 +46,8 @@
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.1",
     "jest-extended": "^2.0.0",
-    "ol": "^7.4.0"
+    "ol": "^7.4.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {},
   "eslintConfig": {
